<resources>
    <string name="app_name">BexDrive</string>
    <string name="cihaz_kay_t">Cihaz Kayıt</string>
    <string name="cihaz_kay_t_kullan_c_ad">Cihaz Kayıt Kullanıcı Adı</string>
    <string name="cihaz_kay_t_ifre">Cihaz Kayıt Şifre</string>
    <string name="cihaz_kaydet">Cihazı Kaydet</string>
    <string name="cihaz_numaras">Cihaz Numarası</string>
    <string name="kullan_c_giri">Kullanıcı Giriş</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="ifre">Şifre</string>
    <string name="kullan_c_giri_yap">Kullanıcı Giriş Yap</string>
    <string name="kullan_c_ad_ile_giri_yap">Kullanıcı adı ile giriş yap.</string>
    <string name="mevcut_servisim">Mevcut Servisim</string>
    <string name="konumumu_g_ncelle">Konumumu Güncelle</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="item_name">Item Name</string>
    <string name="service_adress">Service Adress</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="haritada_g_ster">Haritada Göster</string>
    <string name="paketleri_g_ster">Paketleri Göster</string>
    <string name="teslim_et">Teslim Et</string>
    <string name="mevcut_servisimi_kontrol_et">Mevcut Servisimi Kontrol Et</string>
    <string name="yola_kmaya_haz_r_m_s_n_z">Yola çıkmaya hazır mısınız?</string>
    <string name="servisi_ba_latarak_adresleri_ziyaret_edebilirsiniz">Servisi başlatarak adresleri ziyaret edebilirsiniz?</string>
    <string name="tahmini_ba_lama_tarihi">Tahmini başlama tarihi:</string>
    <string name="tahmini_tslm_tarihi">Tahmini teslim tarihi : %s</string>
    <string name="servisi_ba_lat">Servisi Başlat</string>
    <string name="paket_bilgileri">Paket Bilgileri</string>
    <string name="paketleri_teslim_et">Paketleri Teslim Et</string>
    <string name="ziyaret_edilecek_adresler">Ziyaret Edilecek Adresler</string>
    <string name="harita">Harita</string>
    <string name="u_ranan_adresler">Uğranan Adresler</string>
    <string name="detay">Detay</string>
    <string name="tebrikler_t_m_adresleri_tamamlad_n_z">Tebrikler, Tüm adresleri tamamladınız.</string>
    <string name="servisi_bitirerek_bir_sonraki_servise_ait_bilgilere_ula_abilirsiniz">Servisi bitirerek bir sonraki servise ait bilgilere ulaşabilirsiniz.</string>
    <string name="sevkiyat_noktas_na_git">Sevkiyat Noktasına Git</string>
    <string name="servisi_bitir">Servisi Bitir</string>
    <string name="tslm_tarihi">Gerçekleşen Teslimat Tarihi : %s</string>
    <string name="teslim_edilmi_paketleri_g_ster">Teslim Edilmiş Paketleri Göster</string>
    <string name="servis_detay">Servis Detayı</string>
    <string name="tahmini_ba_lama_zaman">Tahmini Başlama zamanı</string>
    <string name="ba_lama_zaman">Başlama Zamanı</string>
    <string name="tahmini_biti_zaman">Tahmini Bitiş Zamanı</string>
    <string name="biti_zaman">Bitiş Zamanı</string>
    <string name="paket_say_s">Paket Sayısı</string>
    <string name="durak_say_s">Durak Sayısı</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="k">Çıkış</string>
    <string name="ara">ARA</string>
    <string name="nokta_aray_n_z">Nokta Arayınız</string>
    <string name="adresi_uanki_konumla_g_ncelle">Adresi Şuanki Konumla Güncelle</string>
</resources>
