<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.RegisterFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.example.bexdrive.register.RegisterViewModel" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/register_background_shape"
            android:alpha="0.9"/>

        <TextView
            android:id="@+id/header_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cihaz_kay_t"
            android:textColor="@color/color_white"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/username_txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cihaz_kay_t_kullan_c_ad"
            android:textColor="@color/color_white"
            android:layout_below="@id/header_register"
            android:layout_marginHorizontal="10dp"/>

        <EditText
            android:id="@+id/device_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_txt_register"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="10dp"
            android:text="@={viewmodel.username}"/>

        <TextView
            android:id="@+id/password_txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cihaz_kay_t_ifre"
            android:textColor="@color/color_white"
            android:layout_below="@id/device_username_register"
            android:layout_marginHorizontal="10dp"/>

        <EditText
            android:id="@+id/device_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_txt_register"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="10dp"
            android:text="@={viewmodel.password}"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_finish_register"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/cihaz_kaydet"
            android:layout_below="@id/device_password_register"
            android:background="@drawable/button_background"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/color_white"
            android:padding="5dp"
            android:onClick="@{viewmodel.onRegisterButtonClicked}"/>

        <TextView
            android:id="@+id/txt_navigate_To_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_finish_register"
            android:padding="10dp"
            android:text="@string/kullan_c_ad_ile_giri_yap"
            android:textColor="@color/color_white"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{viewmodel.openLoginFragment}"/>
    </RelativeLayout>

</FrameLayout>
</layout>